SERVER-89408 Do not estimate state memory for non-removable windows (#21205)

GitOrigin-RevId: b3768279ece273b15edd569badb8a80ec822ccb5